section 4 format ok good

--- a/ia.tex
+++ b/ia.tex
@@ -292,17 +292,17 @@ Before starting the lab, physical, environmental, and ethical safety issues must
     \hline
     Wiring and electronics & Baggy clothing should not be worn to avoid the risk of accidentally tangling with wires. If not used in an experiment, chemicals should be kept far away from electronics.\\
     \hline
-    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted. Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. \parencite{ref}\\
+    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted \parencite{ref}. Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. \parencite{ref}\\
     \hline
-    Wasting yeast & Yeast used in this experiment is also used in baking, and wasting it can be an ethical concern. Any unused yeast that has not been contaminated with a scoopula should be returned.\\
+    Wasting yeast & Yeast used in this experiment is also used in baking, and wasting it could be an ethical concern. Any unused yeast that has not been contaminated with a scoopula should be returned.\\
     \hline
-    Spills and splashes & PPE such as goggles should be worn until the lab is cleared to prevent chemicals from coming in contact with the eyes. Paper towels should be kept handy at all times to clean up spills.\\
+    Spills and splashes & PPE such as goggles should be worn until the lab is cleared to prevent chemicals from coming in contact with the eyes. Paper towels should be available at all times to clean up spills.\\
     \hline
 \end{tabularx}
 \end{table}
 
 \subsection{Hypothesis}
-Given that the yeast was fully activated and dissolved, the concentration of carbon dioxide produced will increase linearly for a short time when glucose gets added, until tapering off, such that the rate of carbon dioxide production reaches 0 as the reaction reaches equilibrium. For lower concentrations of glucose, the initial reaction velocity and the final concentration of carbon dioxide gas produced will be smaller than higher concentrations of glucose. When plotting the initial reaction velocity against the concentration of glucose, the curve of best-fit will fit the Michaelis Menten kinetics model, passing through the origin.
+Given that the yeast was fully activated and dissolved, the concentration of carbon dioxide produced will increase linearly for a short time after glucose is added, until tapering off, such that the rate of carbon dioxide production reaches 0 as the reaction reaches equilibrium. For lower concentrations of glucose, the initial reaction velocity and the final concentration of carbon dioxide gas produced will be smaller than higher concentrations of glucose. When plotting the initial reaction velocity against various concentrations of glucose, the curve of best-fit will fit the Michaelis Menten kinetics model, passing through the origin.
 
 % todo table below or following table
 \subsection{Variables}
@@ -352,17 +352,17 @@ The following materials were used in my experiment:
     & \textbullet Deionized water \\
     \hline
     Containers and tools & \textbullet 1\,\si{L} beaker \\
-    & \textbullet 100\,\si{mL} graduated cylinder $(\pm0.5\,\si{cm})$ \\  % TODO turn brackets into $()$
+    & \textbullet 100\,\si{mL} graduated cylinder $(\pm0.5\,\si{mL})$ \\  % TODO turn brackets into $()$
     & \textbullet 250\,\si{mL} Nalgene bottle \\
     & \textbullet Magnetic stir bar \\
-    & \textbullet Folded paper for holding reactants \\
+    & \textbullet Folded paper for depositing reactants when weighing \\
     & \textbullet Scoopula \\
     \hline
     Devices & \textbullet Barnstead/Thermolyne magnetic stirring hotplate \\
     & \textbullet Vernier LabQuest2 \\
     & \textbullet Vernier stainless steel temperature probe \\
-    & \textbullet A\&D EJ-200 scale $(\pm0.005\,\si{cm})$ \\
-    & \textbullet Vernier \ce{CO2} gas sensor $(\pm0.005\,\si{cm})$ \\
+    & \textbullet A\&D EJ-200 scale $(\pm0.005\,\si{g})$ \\
+    & \textbullet Vernier \ce{CO2} gas sensor \\
     \hline
 \end{tabularx}
 \end{table}
@@ -372,19 +372,19 @@ The experiment was carried out following the procedure below:
     % \setlength\itemsep{-5pt}
     \item Approximately 0.5\,\si{L} of deionized water was prepared in a 1\,\si{L} beaker and placed on a magnetic stirring hotplate.
     \item The Vernier LabQuest was plugged in with a Vernier temperature probe.
-    \item THe water was heated until it reached approximately 37\,\si{\celsius}. The temperature of the hotplate was kept at around 40\,\si{\celsius} to 45\,\si{\celsius} to account for cooling.
-    \item 0.1\,\si{g} of glucose and 2\,\si{g} of Red Star active dry yeast were weighed
-    \item The yeast was deposited in the 250\,\si{ml} Nalgene bottle with the magnetic stir bar.
-    \item 100\,\si{ml} of water measured with a graduated cylinder was poured from the 1\,\si{L} beaker to the Nalgene bottle.
-    \item The bottle was transferred to the warm water bath with its cap was screwed on.
-    \item The \ce{CO2} gas sensor was connected and calibrated to read high concentrations of \ce{CO2} gas. The LabQuest was set to 20 seconds per sample for 10 minutes.
-    \item Magnetic stirring was activated to mix the yeast solution to ensure that all the yeast was dissolved and activated. During this phase, observations were recorded and the \ce{CO2} gas sensor was warmed up to read a baseline concentration.
-    \item After the yeast was activated glucose was deposited in the bottle and the \ce{CO2} gas sensor was immediately swapped with the cap to block \ce{CO2} from escaping.
-    \item The Nalgene-\ce{CO2} sensor setup was lightly swirled around the beaker to allow the stir bar to reach all corners of the bottle.
+    \item The water was heated until it reached approximately 37\,\si{\celsius}. The temperature of the hotplate was kept at around 40\,\si{\celsius} to 46\,\si{\celsius} to account for cooling.
+    \item 0.10\,\si{g} of glucose and 2.00\,\si{g} of Red Star active dry yeast were weighed
+    \item The yeast was deposited in the 250\,\si{mL} Nalgene bottle with the magnetic stir bar.
+    \item 100\,\si{mL} of water was measured with a graduated cylinder was poured from the 1\,\si{L} beaker to the bottle.
+    \item After screwing the cap on, the bottle transferred to the warm water bath.
+    \item The Vernier \ce{CO2} gas sensor was connected and calibrated to read high concentrations of \ce{CO2} gas. The LabQuest was set to 20 seconds per sample for 10 minutes.
+    \item Magnetic stirring was activated for about 10 minutes to mix the yeast solution, ensuring that all the yeast was dissolved and activated. During this phase, observations were recorded and the \ce{CO2} gas sensor was warmed up to read a baseline \ce{CO2} concentration.
+    \item After the yeast was activated, glucose was deposited in the bottle and the cap was immediately swapped with the \ce{CO2} gas sensor to prevent \ce{CO2} from escaping.
+    \item The Nalgene-\ce{CO2} sensor setup was lightly swirled around the beaker, allowing the stir bar to reach all corners of the bottle.
     \item After 10 minutes of fermentation, data was exported to a USB and the \ce{CO2} gas sensor was removed. Observations were made as the reaction took place.
-    \item The \ce{CO2} gas sensor was wiped to remove condensation and fanned to remove residual \ce{CO2}. The Nalgene bottle was thoroughly rinsed and fanned to remove any yeast-glucose solution and residual \ce{CO2} gas.
-    \item THe 1\,\si{L} beaker was filled with more distilled water if there was not enough to half-submerge the Nalgene bottle.
-    \item Steps 3 to 14 were repeated until 2 trials of data were collected for 0.1\,\si{g}, 0.25\,\si{g}, 0.5\,\si{g}, and 1\,\si{g} of glucose.
+    \item The \ce{CO2} gas sensor was wiped to remove condensation and fanned to blow away residual \ce{CO2}. The bottle was thoroughly rinsed and also fanned to remove any yeast-glucose solution and residual \ce{CO2}.
+    \item The 1\,\si{L} beaker was filled with more distilled water if there was not enough to half-submerge the bottle.
+    \item Steps 2 to 14 were repeated until 2 trials of data were collected for 0.10\,\si{g}, 0.25\,\si{g}, 0.50\,\si{g}, and 1.00\,\si{g} of glucose.
 \end{enumerate}
 
 \section{Data Collection and Processing}
