introduction (1) and conclusion (8) look ok

--- a/ia.tex
+++ b/ia.tex
@@ -481,7 +481,7 @@ With the processed data in tablex, reaction velocity can be plotted against gluc
 \section{Evaluation}
 
 \section{Conclusion}
-Although the experiment did not match up perfectly with the theory, the results still made sense as a whole for a sufficient level of analysis. Evidently, this experiment models an extremely downscaled version of the many aspects involved in baking, thus presenting itself as more of a study into fermentation and enzyme kinetics rather than a practical guide to baking the best loaf of bread. In conclusion, the explanation of yeast producing carbon dioxide to cause bread to rise is widely accepted by many, but also an understatement, because it often unacknowledges the complex and fascinating chemistry involved behind the scenes.
+Although the experiment did not match up perfectly with the theory, the results still made sense as a whole for a sufficient level of analysis. Evidently, this experiment models an extremely downscaled version of the many aspects involved in baking, thus presenting itself as more of a study into fermentation and enzyme kinetics rather than a practical guide to baking the best loaf of bread. In conclusion, the explanation of yeast producing carbon dioxide to cause bread to rise is widely accepted by many, but also an understatement, because it often unacknowledges the complex and fascinating chemical mechanisms involved.
 
 \nocite{*}
 
